# xlscli

./: .gitignore  README.md.todo  docker-compose.yml  files.py  main.py  pyproject.toml  pytest.ini  xls.py
commands/: files.py
helpers/: commands.py  config.py  docker.py  files.py  logconfig.py  logging_enum.py  xls.py
tests/: conftest.py  test_patch_mock.py
tests/commands/: test_files.py
tests/helpers/: test_commands.py  test_config.py  test_docker.py  test_files.py
